buildscript {
  repositories { mavenCentral() }
}

plugins {
  id 'com.netflix.nebula.netflixoss' version '11.5.0'
}

subprojects {
  apply plugin: 'nebula.netflixoss'

  java {
    toolchain {
      languageVersion = JavaLanguageVersion.of(17)
    }
  }

  tasks.withType(Javadoc) {
    options.tags(
        'apiNote:a:API Note:',
        'implSpec:a:Implementation Requirements:',
        'implNote:a:Implementation Note:')
  }

  group = 'com.netflix.hollow'

  repositories {
    mavenCentral()
  }
}
